fix white spaces in story preview

--- a/src/containers/views/StoryPreview/StoryPreview.scss
+++ b/src/containers/views/StoryPreview/StoryPreview.scss
@@ -38,6 +38,11 @@
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   padding-left: 13rem;
+  background: $brand-blue;
+  color: #fff;
+  .card-text{
+    color:#fff;
+  }
 }
 
 .block-width {
@@ -119,6 +124,11 @@
   margin-bottom: 6rem;
   .card-block {
     width: 100%;
+    background: $brand-blue;
+    color: #fff;
+  }
+  .card-title{
+    color: #fff;
   }
 }
 
@@ -135,7 +145,9 @@
 
 .monument-text {
   margin-bottom: 4rem;
+  color: #fff;
 }
+
 
 .article-centering {
   flex-flow: row;
